tests/snapshots/files__shared_snapshot_print_function.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((F 4)
 (G 4)
 (R 4))
