tests/snapshots/files__shared_snapshot_proof_extract_cost.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((Cheap 1)
 (Expensive 1))
