tests/snapshots/files__shared_snapshot_qwen.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((Add 15)
 (Bf16 1)
 (Bool 1)
 (Cast 7)
 (ComputeAttnMask 0)
 (Constant 9)
 (ConsumedBuffer 0)
 (CustomOpKind 0)
 (ECons 148)
 (ENil 1)
 (Exp2 3)
 (F16 1)
 (F32 1)
 (F4E2M1 0)
 (F8E4M3 0)
 (F8E5M2 0)
 (F8UE8M0 0)
 (FlashInferAttention 0)
 (FusedAdd 15)
 (FusedExp 3)
 (FusedExp2 3)
 (FusedLog2 0)
 (FusedMul 26)
 (FusedRecip 5)
 (FusedSin 1)
 (FusedSqrt 3)
 (FusionEnd 16)
 (FusionStart 40)
 (GLUMoE 0)
 (Gather 5)
 (I4 0)
 (ICons 1541)
 (INil 1)
 (Input 472)
 (Int 1)
 (Iota 20)
 (KernelAdd 16)
 (KernelBatchMatMul 0)
 (KernelBatchMatVec 0)
 (KernelCast 7)
 (KernelConstant 9)
 (KernelEmbed 0)
 (KernelExp 3)
 (KernelExp2 3)
 (KernelGather 5)
 (KernelIota 20)
 (KernelLessThan 1)
 (KernelLog2 0)
 (KernelMax 1)
 (KernelMean 0)
 (KernelMod 0)
 (KernelMul 39)
 (KernelRecip 9)
 (KernelScatter 2)
 (KernelScatterNoCopy 0)
 (KernelSigmoid 1)
 (KernelSin 1)
 (KernelSoftmax 0)
 (KernelSqrt 3)
 (KernelSum 13)
 (LessThan 1)
 (Log2 0)
 (LoopEnd 1)
 (LoopInput 13)
 (LoopInputStatic 0)
 (LoopOutput 2)
 (LoopOutputSelect 70)
 (LoopStart 1)
 (MAdd 18)
 (MAnd 0)
 (MCeilDiv 12)
 (MDiv 5)
 (MFloat 0)
 (MFloorTo 0)
 (MGte 1)
 (MIter 1)
 (MLt 1)
 (MMax 6)
 (MMin 2)
 (MMod 4)
 (MMul 367)
 (MNum 21)
 (MOr 0)
 (MReplace 0)
 (MReplaceList 0)
 (MSub 1)
 (MVar 2)
 (Max 1)
 (MkGLUMoEExpertGatherState 0)
 (MkGLUMoEExpertIndexState 1)
 (MkGLUMoEGateUpState 0)
 (MkGLUMoEGemmaDownState 0)
 (MkGLUMoEGemmaGELUState 0)
 (MkGLUMoESwiGLUDownState 0)
 (MkGLUMoESwiGLUState 0)
 (MkKernelSigmoidScaledState 2)
 (Mod 0)
 (Mul 39)
 (Op 1429)
 (Output 543)
 (OutputJoin 542)
 (Recip 9)
 (RemoveNthFromEnd 0)
 (ReplaceNthFromEnd 0)
 (RowMajor 0)
 (Scatter 2)
 (Sin 1)
 (Softmax 0)
 (Sqrt 3)
 (Sum 13)
 (TF32 1)
 (consumed_buffer_ilist_contains 9700)
 (cublaslt 14)
 (cublaslt_base_dtype 4)
 (cuda_local_memory 2226)
 (cuda_output_bytes 231)
 (dtype 1372)
 (glumoe_expert_gather 0)
 (glumoe_expert_index 1)
 (glumoe_gate_up 0)
 (glumoe_gemma_down 0)
 (glumoe_gemma_gelu 0)
 (glumoe_swiglu 0)
 (glumoe_swiglu_down 0)
 (identical_inputs 683)
 (kernel_sigmoid_scaled 2)
 (len 0)
 (n_elements 0)
 (nth_from_end 0))
