tests/snapshots/files__shared_snapshot_qwen3_moe.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((Add 23)
 (Bf16 1)
 (Bool 1)
 (Cast 11)
 (ComputeAttnMask 0)
 (Constant 10)
 (ConsumedBuffer 0)
 (CustomOpKind 0)
 (ECons 218)
 (ENil 1)
 (Exp2 4)
 (F16 1)
 (F32 1)
 (F4E2M1 0)
 (F8E4M3 0)
 (F8E5M2 0)
 (F8UE8M0 0)
 (FlashInferAttention 0)
 (FusedAdd 17)
 (FusedExp 4)
 (FusedExp2 4)
 (FusedLog2 0)
 (FusedMul 32)
 (FusedRecip 5)
 (FusedSin 1)
 (FusedSqrt 3)
 (FusionEnd 18)
 (FusionStart 47)
 (GLUMoE 1)
 (Gather 9)
 (I4 0)
 (ICons 1876)
 (INil 1)
 (Input 629)
 (Int 1)
 (Iota 29)
 (KernelAdd 24)
 (KernelBatchMatMul 0)
 (KernelBatchMatVec 0)
 (KernelCast 11)
 (KernelConstant 10)
 (KernelEmbed 0)
 (KernelExp 4)
 (KernelExp2 4)
 (KernelGather 9)
 (KernelIota 29)
 (KernelLessThan 2)
 (KernelLog2 0)
 (KernelMax 2)
 (KernelMean 0)
 (KernelMod 0)
 (KernelMul 48)
 (KernelRecip 10)
 (KernelScatter 3)
 (KernelScatterNoCopy 0)
 (KernelSigmoid 1)
 (KernelSin 1)
 (KernelSoftmax 0)
 (KernelSqrt 3)
 (KernelSum 17)
 (LessThan 2)
 (Log2 0)
 (LoopEnd 1)
 (LoopInput 13)
 (LoopInputStatic 0)
 (LoopOutput 2)
 (LoopOutputSelect 94)
 (LoopStart 1)
 (MAdd 24)
 (MAnd 0)
 (MCeilDiv 15)
 (MDiv 7)
 (MFloat 0)
 (MFloorTo 0)
 (MGte 1)
 (MIter 1)
 (MLt 1)
 (MMax 10)
 (MMin 2)
 (MMod 6)
 (MMul 522)
 (MNum 32)
 (MOr 0)
 (MReplace 0)
 (MReplaceList 0)
 (MSub 1)
 (MVar 2)
 (Max 2)
 (MkGLUMoEExpertGatherState 4)
 (MkGLUMoEExpertIndexState 5)
 (MkGLUMoEGateUpState 4)
 (MkGLUMoEGemmaDownState 0)
 (MkGLUMoEGemmaGELUState 0)
 (MkGLUMoESwiGLUDownState 2)
 (MkGLUMoESwiGLUState 2)
 (MkKernelSigmoidScaledState 2)
 (Mod 0)
 (Mul 47)
 (Op 1687)
 (Output 724)
 (OutputJoin 723)
 (Recip 10)
 (RemoveNthFromEnd 0)
 (ReplaceNthFromEnd 0)
 (RowMajor 0)
 (Scatter 3)
 (Sin 1)
 (Softmax 0)
 (Sqrt 3)
 (Sum 17)
 (TF32 1)
 (consumed_buffer_ilist_contains 16447)
 (cublaslt 10)
 (cublaslt_base_dtype 4)
 (cuda_local_memory 2845)
 (cuda_output_bytes 283)
 (dtype 1806)
 (glumoe_expert_gather 4)
 (glumoe_expert_index 5)
 (glumoe_gate_up 4)
 (glumoe_gemma_down 0)
 (glumoe_gemma_gelu 0)
 (glumoe_swiglu 2)
 (glumoe_swiglu_down 2)
 (identical_inputs 784)
 (kernel_sigmoid_scaled 2)
 (len 0)
 (n_elements 0)
 (nth_from_end 0))
