tests/snapshots/files__shared_snapshot_relation_query_allowed.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((Num 0)
 (myrel 2)
 (shouldappear 1)
 (shouldnotappear 0))
