tests/snapshots/files__shared_snapshot_repro_738_fn_sort.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
(extraction-costs 1)
((fn 0)
 (x 1))
