tests/snapshots/files__shared_snapshot_repro_define.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
S: 3
S: 3
ZeroConst: 1
ZeroConst: 1
