tests/snapshots/files__shared_snapshot_repro_desugar_143.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
Num: 36
f: 41
fib: 22
