tests/snapshots/files__shared_snapshot_repro_herbie_vanilla.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((Acos 0)
 (Acosf32Ty 0)
 (Acosf64Ty 0)
 (Acosh 0)
 (Acoshf32Ty 0)
 (Acoshf64Ty 0)
 (Add 591)
 (Addf32Ty 29)
 (Addf64Ty 591)
 (And 0)
 (AndTy 0)
 (Approx 0)
 (Array 0)
 (Array2f64Ty 0)
 (Array3 0)
 (Array3f32Ty 0)
 (Array3f64Ty 0)
 (Arrayf32Ty 0)
 (Arrayf64Ty 0)
 (Asin 0)
 (Asinf32Ty 0)
 (Asinf64Ty 0)
 (Asinh 0)
 (Asinhf32Ty 0)
 (Asinhf64Ty 0)
 (Assert 0)
 (Atan 0)
 (Atan2 0)
 (Atan2f32Ty 0)
 (Atan2f64Ty 0)
 (Atanf32Ty 0)
 (Atanf64Ty 0)
 (Atanh 0)
 (Atanhf32Ty 0)
 (Atanhf64Ty 0)
 (Cast 0)
 (Cbrt 0)
 (Cbrtf32Ty 0)
 (Cbrtf64Ty 0)
 (Ceil 0)
 (Ceilf32Ty 0)
 (Ceilf64Ty 0)
 (Copysign 1)
 (Copysignf32Ty 1)
 (Copysignf64Ty 1)
 (Cos 129)
 (Cosf32Ty 4)
 (Cosf64Ty 129)
 (Cosh 1)
 (Coshf32Ty 1)
 (Coshf64Ty 1)
 (Div 879)
 (Divf32Ty 61)
 (Divf64Ty 879)
 (E 0)
 (Ef32Ty 0)
 (Ef64Ty 0)
 (Eq 0)
 (Eqf32Ty 0)
 (Eqf64Ty 0)
 (Erf 0)
 (Erfc 0)
 (Erfcf32Ty 0)
 (Erfcf64Ty 0)
 (Erff32Ty 0)
 (Erff64Ty 0)
 (Error 0)
 (Exp 1)
 (Exp2 0)
 (Exp2f32Ty 0)
 (Exp2f64Ty 0)
 (Expf32Ty 1)
 (Expf64Ty 1)
 (Expm1 0)
 (Expm1f32Ty 1)
 (Expm1f64Ty 1)
 (Fabs 52)
 (Fabsf32Ty 8)
 (Fabsf64Ty 52)
 (False 0)
 (FalseTy 0)
 (Fdim 0)
 (Fdimf32Ty 0)
 (Fdimf64Ty 0)
 (Floor 0)
 (Floorf32Ty 0)
 (Floorf64Ty 0)
 (Fma 0)
 (Fmaf32Ty 150)
 (Fmaf64Ty 1785)
 (Fmax 0)
 (Fmaxf32Ty 0)
 (Fmaxf64Ty 0)
 (Fmin 0)
 (Fminf32Ty 0)
 (Fminf64Ty 0)
 (Fmod 0)
 (Fmodf32Ty 0)
 (Fmodf64Ty 0)
 (Gt 0)
 (Gte 0)
 (Gtef32Ty 0)
 (Gtef64Ty 0)
 (Gtf32Ty 0)
 (Gtf64Ty 0)
 (Hypot 0)
 (Hypotf32Ty 4)
 (Hypotf64Ty 4)
 (If 0)
 (Iff32Ty 0)
 (Iff64Ty 0)
 (Infinity 0)
 (InfinityTy 0)
 (Infinityf32Ty 0)
 (Lgamma 0)
 (Lgammaf32Ty 0)
 (Lgammaf64Ty 0)
 (Log 0)
 (Log10 0)
 (Log10f32Ty 0)
 (Log10f64Ty 0)
 (Log1p 0)
 (Log1pf32Ty 0)
 (Log1pf64Ty 0)
 (Log2 0)
 (Log2f32Ty 0)
 (Log2f64Ty 0)
 (Logb 0)
 (Logbf32Ty 0)
 (Logbf64Ty 0)
 (Logf32Ty 0)
 (Logf64Ty 0)
 (Lt 0)
 (Lte 0)
 (Ltef32Ty 0)
 (Ltef64Ty 0)
 (Ltf32Ty 0)
 (Ltf64Ty 0)
 (Mul 2086)
 (Mulf32Ty 78)
 (Mulf64Ty 2086)
 (Nan 0)
 (Nanf32Ty 0)
 (Nanf64Ty 0)
 (Neg 257)
 (Negf32Ty 22)
 (Negf64Ty 257)
 (Neq 0)
 (Neqf32Ty 0)
 (Neqf64Ty 0)
 (Not 0)
 (NotTy 0)
 (Num 28)
 (Num_arr_2_arr_2_sym_binary64 28)
 (Num_arr_2_sym_binary32 28)
 (Num_arr_2_sym_binary64 28)
 (Num_arr_3_sym_binary32 28)
 (Num_arr_3_sym_binary64 28)
 (Num_sym_binary32 28)
 (Num_sym_binary64 28)
 (Or 0)
 (OrTy 0)
 (Pi 1)
 (Pif32Ty 1)
 (Pif64Ty 1)
 (Pow 48)
 (Pow2 0)
 (Powf32Ty 5)
 (Powf64Ty 48)
 (Ref 0)
 (Reff32Ty 0)
 (Reff64Ty 0)
 (Refr2f64Ty 0)
 (Refr3f32Ty 0)
 (Refr3f64Ty 0)
 (Remainder 0)
 (Remainderf32Ty 0)
 (Remainderf64Ty 0)
 (Rint 0)
 (Rintf32Ty 0)
 (Rintf64Ty 0)
 (Round 0)
 (Roundf32Ty 0)
 (Roundf64Ty 0)
 (Sin 83)
 (Sinf32Ty 5)
 (Sinf64Ty 83)
 (Sinh 1)
 (Sinhf32Ty 1)
 (Sinhf64Ty 1)
 (SmallhotTy 18920)
 (Sound-/ 127)
 (Sound-Log 0)
 (Sound-Pow 11)
 (Sqrt 11)
 (Sqrtf32Ty 2)
 (Sqrtf64Ty 11)
 (Sub 325)
 (Subf32Ty 14)
 (Subf64Ty 325)
 (Tan 0)
 (Tanf32Ty 0)
 (Tanf64Ty 0)
 (Tanh 1)
 (Tanhf32Ty 1)
 (Tanhf64Ty 1)
 (Tgamma 0)
 (Tgammaf32Ty 0)
 (Tgammaf64Ty 0)
 (Then 0)
 (True 0)
 (TrueTy 0)
 (Trunc 0)
 (Truncf32Ty 0)
 (Truncf64Ty 0)
 (Var 6)
 (Var_arr_2_arr_2_sym_binary64 0)
 (Var_arr_2_sym_binary32 0)
 (Var_arr_2_sym_binary64 0)
 (Var_arr_3_sym_binary32 0)
 (Var_arr_3_sym_binary64 0)
 (Var_sym_binary32 0)
 (Var_sym_binary64 6)
 (Var_sym_bool 0)
 (bad-merge? 1)
 (const1 1)
 (const10 1)
 (const11 1)
 (const12 1)
 (const13 1)
 (const14 1)
 (const15 1)
 (const16 1)
 (const17 1)
 (const18 1)
 (const19 1)
 (const2 1)
 (const20 1)
 (const21 1)
 (const22 1)
 (const23 1)
 (const24 1)
 (const25 1)
 (const26 1)
 (const27 1)
 (const28 1)
 (const29 1)
 (const3 1)
 (const30 1)
 (const31 1)
 (const32 1)
 (const33 1)
 (const34 1)
 (const35 1)
 (const36 1)
 (const37 1)
 (const38 1)
 (const39 1)
 (const4 1)
 (const40 1)
 (const41 1)
 (const42 1)
 (const43 1)
 (const44 1)
 (const45 1)
 (const5 1)
 (const6 1)
 (const7 1)
 (const8 1)
 (const9 1)
 (do-lift 0)
 (do-lower 2175))
