tests/snapshots/files__shared_snapshot_repro_new_backend_prims.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
predicate: 3
predicate: 2
